@@ -11,20 +11,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-10.15]
+        os: [ubuntu-20.04, windows-2019, macOS-11]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v3
         name: Install Python
-        with:
-          python-version: "3.9"
+
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.12.3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.0.0a3
+        run: python -m cibuildwheel --output-dir wheelhouse
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
 
@@ -37,7 +38,7 @@ jobs:
       - uses: actions/setup-python@v2
         name: Install Python
         with:
-          python-version: "3.8"
+          python-version: "3.11"
 
       - name: Build sdist
         run: python setup.py sdist
