@@ -1,5 +1,5 @@
-Cython==0.29.23
-pytest==7.0.1
-pip==21.1.2
-mypy==0.942
-black==22.3.0
+Cython==0.29.35
+pytest==7.3.1
+pip==23.1.2
+mypy==1.3.0
+black==23.3.0
